--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <div id="profile">
 
 
-    <img src="./assets/assets/avatar.png" alt=""
+    <img src="./assets/assets/pl.img.png" alt=""
     />
-    <p>@maykbrito</p>
+    <p>@derrepente7_</p>
     <div id="switch" onclick="toggleMode()">
         <button></button>
         <span></span>
@@ -27,30 +27,21 @@
 
 <ul>
     <li>
-        <a href="#">Inscrever-se no NLW</a>
+        <a target="_blank" href="https://www.instagram.com/vgmodas_bypalomavenas/">Conheça minha loja</a>
     </li>
 
     <li>
-        <a href="">Baixar meu e-book</a>
-    </li>
-    <li>
-        <a href="#">Veja meu portifólio</a>
-    </li>
-    <li>
-        <a href="#">Conheça o explorer</a>
+        <a target="_blank" href="https://api.whatsapp.com/send/?phone=5521976032982&text&type=phone_number&app_absent=0">Whatsapp da loja</a>
     </li>
 </ul>
 <div id="social-links">
-        <a href="https://github.com/maykbrito" target="_blank">
-            <ion-icon name="logo-github"></ion-icon>
-            </a>
+       
+    
             <a href="https://www.instagram.com/derrepente7_/" target="_blank">
             <ion-icon name="logo-instagram"></ion-icon>
             </a>
             <a href="https://www.youtube.com/@palomamaternidadereal2723" target="_blank">
            <ion-icon name="logo-youtube"></ion-icon>
-            <a href="https://linkedin.com/in/maykbrito" target="_blank">
-            <ion-icon name="logo-linkedin"></ion-icon>
         </a>    
 </div>
 <footer>Feito por João Pedro</footer>
